# ironwail

./: .gitignore  .gitmodules  ARCHITECTURE_CORRECTION.md  BUILD_INSTRUCTIONS.md  CARNIFEX_CREDITS.md  CMakeLists.txt  FIX_REMOVE_ISFRONTEND_CHECKS.md  HOWTO_TEST_HEADLESS.md  PLUGIN_ARCHITECTURE_PROPOSAL.md  PLUGIN_MIGRATION_EXAMPLE.md  PLUQ_HYBRID_RESOURCES.md  PLUQ_STATUS.md  README.md  REFACTOR_COMPLETE_CLEANUP.md  REFACTOR_SIMPLIFY_PLUQ_MODE.md  REORGANIZE_PLUQ_FILES.md  TESTING_STATUS.md  build.bat  build_carnifex.sh  carnifex-engine-backup  test_console.cfg  test_music.sh  test_music_debug.sh
.github/workflows/: code_quality.yml  linux_ci.yml  macos_ci.yml  mingw_ci.yml  multi_ci.yml  music_metadata_test.yml  release.yml  windows_ci.yml
Quake/: .gitignore  BUILD_RESULTS.md  BUILD_VERIFICATION.md  Makefile  Makefile.deps  Makefile.pluq_frontend  Makefile.pluq_test_frontend  Makefile.w32  Makefile.w64  PLUQ_FRONTEND_README.md  audio_stubs.c  bgmusic.c  build-flatcc.sh  build-nng-flatcc.sh  build-nng.sh  chase.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  common.c  common.h  console.c  default_cfg.h  download-dependencies.sh  filesys.c  gl_draw.c  gl_fog.c  gl_model.c  gl_model.h  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_shaders.c  gl_shaders.h  gl_sky.c  gl_texmgr.c  (+59 more)
Quake/nng_lib/: libnng.so.1  libnng.so.2.0.0-dev
Quake/shaders/: blobshadow.frag  blobshadow.vert  cluster_lights.comp  debug3d.vert  particles.frag  particles.vert  shadow_common.glsl  shadow_depth.fs  shadow_depth.vs  sky_cubemap.frag  sky_cubemap.vert  sky_layers.frag  sky_layers.vert  skystencil.vert  sprites.frag  sprites.vert  water.frag  water.vert  world.frag  world.vert
Windows/VisualStudio/: ironwail.vcxproj  ironwail.vcxproj.filters
carnifex/: README.md  autoexec.cfg  base.wad  gfx.wad  items.wad  jr_med.wad  medieval.wad  metal.wad  start.wad  tim.wad  wizard.wad
carnifex-game/: quake.rc
carnifex/gfx/: anum_0.lmp  anum_4.lmp  anum_6.lmp  conchars.lmp  face1.lmp  ibar.lmp  inva2_rlaunch.lmp  inva4_lightng.lmp  inva4_nailgun.lmp  inva4_shotgun.lmp  num_1.lmp  num_2.lmp  num_3.lmp  num_5.lmp  num_7.lmp  num_8.lmp  num_9.lmp  num_colon.lmp  num_slash.lmp  sb_armor2.lmp  sb_key1.lmp  sb_shells.lmp  sb_sigil1.lmp  sb_sigil2.lmp  sb_sigil3.lmp  sb_sigil4.lmp  turtle.lmp
carnifex/maps/: README.md  start.bsp
core/: bgmusic.c  common.c  gl_fog.c  gl_screen.c  gl_shaders.c  host.c  menu.c  music_metadata.c  music_metadata.h  snd_opus.c  sys_sdl_win.c  wad.c
docs/: CARNIFEX_ENGINE_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  how2use-q3-shaders.md  shadows.md
docs/development/: AUDIO_FORMATS.md  AUDIO_QUICK_REFERENCE.md  MINIMAL_GAME_SUMMARY.md  MUSIC_METADATA_SYSTEM.md  TOOLS_README.md
docs/localization/: loc_english.txt
docs/user/: CARNIFEX_CREDITS.md  CARNIFEX_ENGINE_GUIDE.md  CARNIFEX_ENGINE_SUMMARY.md  CARNIFEX_GAME_TEMPLATE.md
pluq-deployment/: .gitignore  INPUT_COMMAND_TEST_RESULTS.md  Makefile  README.md  SETUP.txt  VERSION.txt  autoexec.cfg  init_pluq.cfg  ironwail  ironwail-pluq-frontend  run-backend.sh  run-frontend.sh  run-standard.sh  test-backend.sh  test-command  test-command.c  test-decoupled.sh  test-frontend-headless.sh  test-headless-final.sh  test-headless.sh  test-input-complete.sh  test-input-receiver  test-input-receiver.c  test-input.sh  test-ipc.sh  test-monitor  test-monitor.c  test-nng-basic  test-nng-basic.c  test-pluq-backend.sh  test-pluq-v2.sh  test-pluq.sh  test.cfg
scripts/: build_carnifex.sh
tools/: README.md  carnifex-cli  carnifex-cli.c
tools/lib/: lmp.c  lmp.h  pak.c  pak.h
tools/scripts/: audio_examples.sh  create_basic_progs.py  create_placeholder_graphics.py  create_simple_map.py  fix_bsp.py  fix_stub_graphics.py
