cmake_minimum_required(VERSION 3.15)
include(${CMAKE_CURRENT_SOURCE_DIR}/Misc/cmake/ExtractVersion.cmake)
project(ironwail VERSION ${IRONWAIL_VERSION} LANGUAGES C)

if (WIN32)
	list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Windows/cmake-modules)
endif()

if(NOT CMAKE_GENERATOR MATCHES "^Visual Studio")
include(GNUInstallDirs)
include(FindPkgConfig)
endif()

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED OFF)
set(CMAKE_C_EXTENSIONS ON)

if( NOT CMAKE_BUILD_TYPE )
	set( CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE )
endif()

string(TOUPPER "${CMAKE_SYSTEM_PROCESSOR}" SYSTEM_PROCESSOR_UPPER)
message(STATUS "OS: ${CMAKE_HOST_SYSTEM_NAME}-${CMAKE_HOST_SYSTEM_PROCESSOR} => ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "CC: ${CMAKE_C_COMPILER_ID}/${CMAKE_C_COMPILER_FRONTEND_VARIANT}")
message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
set(ENABLE_USERDIRS TRUE CACHE STRING "Enable user directories")
if(ENABLE_USERDIRS AND CMAKE_C_COMPILER_FRONTEND_VARIANT MATCHES "GNU|AppleClang" AND NOT CMAKE_CROSSCOMPILING)
	add_compile_definitions(DO_USERDIRS=1)
	message(STATUS "User directories: enabled")
else()
	add_compile_definitions(DO_USERDIRS=0)
	message(STATUS "User directories: disabled")
endif()

add_compile_definitions(_FILE_OFFSET_BITS=64)
add_compile_definitions($<$<CONFIG:Debug>:DEBUG=1> $<$<NOT:$<CONFIG:Debug>>:NDEBUG=1>)
add_compile_definitions($<$<CONFIG:Debug>:_DEBUG=1> $<$<NOT:$<CONFIG:Debug>>:_NDEBUG=1>)
add_compile_definitions(USE_SDL2)
add_compile_definitions(USE_CODEC_WAVE)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wno-gnu-alignof-expression)
endif()

if (CMAKE_C_COMPILER_FRONTEND_VARIANT MATCHES "GNU|AppleClang")
	if( NOT CMAKE_BUILD_OPTLEVEL )
		set( CMAKE_BUILD_OPTLEVEL 3 CACHE STRING "Choose the optimization level." FORCE )
	endif()
	add_compile_options(-O${CMAKE_BUILD_OPTLEVEL})
	if (NOT CMAKE_CROSSCOMPILING)
		add_compile_options(-march=native)

		if (${SYSTEM_PROCESSOR_UPPER} MATCHES "X64|X86_64|AMD64")
			add_compile_options(-mfpmath=sse)
		endif()
		if (${SYSTEM_PROCESSOR_UPPER} MATCHES "PPC|POWERPC|PPC64|PPC64LE")
			include(CheckCSourceCompiles)

			set(CMAKE_REQUIRED_FLAGS "-maltivec")
			check_c_source_compiles("#include <altivec.h> int main() { vector int v = (vector int){0}; return 0; }" HAVE_ALTIVEC)

			if(HAVE_ALTIVEC)
				add_compile_options(-maltivec)
			endif()
		endif()
	endif()
	add_compile_options(-ftree-vectorize)
	add_compile_options(-fopenmp)
	if(NOT CMAKE_C_COMPILER_FRONTEND_VARIANT MATCHES "AppleClang")
		add_compile_options(-fopenmp-simd)
	endif()
	add_compile_options(-fno-asynchronous-unwind-tables)
	if (CMAKE_BUILD_TYPE MATCHES Debug)
		add_compile_options(-g)
	else()
		# Use IPO/LTO if available
		if(NOT ${CMAKE_VERSION} VERSION_LESS "3.9.0")
			cmake_policy(SET CMP0069 NEW)
			include(CheckIPOSupported)
			check_ipo_supported(RESULT result)
			if(result)
				set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
				message(STATUS "Using IPO/LTO.")
			endif()
		endif()
	endif()
	add_compile_options(-Wall)
	add_compile_options(-Wextra)
	add_compile_options(-Wno-write-strings)
	add_compile_options(-Wno-unused-result)
	add_compile_options(-Wno-unused-variable)
	add_compile_options(-Wno-unused-but-set-variable)
	#	add_compile_options(-Wunreachable-code)		# Warn about unreachable code paths
	add_compile_options(-fpermissive)
	add_compile_options(-ffunction-sections)	# Put each function in its own section
	add_compile_options(-fdata-sections)		# Put each variable in its own section
	if (CMAKE_BUILD_TYPE MATCHES ReleaseStrip)
		add_link_options(-Wl,--gc-sections)
		add_link_options(-Wl,-s)
	endif()
	link_libraries(m)
	if (WIN32 AND MINGW)
		link_libraries(mingw32)
	endif()
else (CMAKE_C_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
	if( NOT CMAKE_BUILD_OPTLEVEL )
		set( CMAKE_BUILD_OPTLEVEL 2 CACHE STRING "Choose the optimization level." FORCE )
	endif()
	add_compile_options(/O${CMAKE_BUILD_OPTLEVEL})
	add_compile_options(/openmp:experimental)
	add_compile_options(/Zc:__STDC__)
	add_compile_options(/std:clatest)
	add_compile_options(/Zc:preprocessor)
	add_compile_options(/W4)
	add_compile_options(/Z7)
	# add_compile_options(/w14702)				# Force C4702 (Unreachable code) to be a Level 1 Warning
	add_compile_options(/wd4996)
	add_compile_options(/wd4244)
	add_compile_options(/wd4113)
	add_compile_options(/wd4047)
	add_compile_options(/wd4024)
	add_compile_options(/Gy)					# Function-level linking (puts each function in its own section)
	add_compile_options(/Gw)					# Optimize global data (puts each variable in its own section)
	if (NOT CMAKE_CROSSCOMPILING)
		add_compile_definitions(_CRT_SECURE_NO_WARNINGS _WIN32)
		if (CMAKE_VS_PLATFORM_NAME MATCHES "x64|Win32")
			add_compile_options(/Gv)
		endif()
	endif()
	if (CMAKE_BUILD_TYPE MATCHES ReleaseStrip)
		add_link_options(/DEBUG:NONE)
		add_link_options(/OPT:REF)				# Eliminate unreferenced functions and data
		add_link_options(/VERBOSE:REF)			# Print out everything the linker throws away
	endif()
	if (CMAKE_BUILD_TYPE MATCHES Debug)
		add_compile_options(/Zi)
		add_link_options(/DEBUG:FULL)
	endif()
	add_link_options(/INCREMENTAL:NO)
	link_libraries(ws2_32 winmm)
endif()

cmake_policy(SET CMP0072 NEW)   #OpenGL_GL_PREFERENCE to GLVND

find_package(SDL2 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(CURL)

find_package(PkgConfig)

if (PKG_CONFIG_FOUND)
    pkg_check_modules(PC_MPG123 IMPORTED_TARGET libmpg123)
    pkg_check_modules(PC_MAD IMPORTED_TARGET mad)
    pkg_check_modules(PC_OPUSFILE IMPORTED_TARGET opusfile)
    pkg_check_modules(PC_FLAC IMPORTED_TARGET flac)
    pkg_check_modules(PC_VORBISFILE IMPORTED_TARGET vorbisfile)
    pkg_check_modules(PC_TREMOR IMPORTED_TARGET vorbisidec)
    pkg_check_modules(PC_MIKMOD IMPORTED_TARGET libmikmod)
    pkg_check_modules(PC_MODPLUG IMPORTED_TARGET libmodplug)
    pkg_check_modules(PC_XMP IMPORTED_TARGET libxmp)
endif()

if (WIN32)
	find_package(BundledCODECS)
endif()

file(GLOB IWAIL_SRC CONFIGURE_DEPENDS "Quake/*.c" "Quake/*.h")

list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/lodepng.h)
list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/lodepng.c)

if (UNIX)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/pl_win.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_wipx.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_wipx.h)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_wins.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_wins.h)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_win.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_win.h)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/sys_sdl_win.c)
elseif (WIN32)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/pl_linux.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_bsd.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_bsd.h)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_udp.c)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/net_udp.h)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/sys_sdl_unix.c)
    list(APPEND IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Windows/QuakeSpasm.rc)
endif()

if (PC_MPG123_FOUND)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/snd_mp3.c)
elseif (PC_MAD_FOUND)
    list(REMOVE_ITEM IWAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Quake/snd_mpg123.c)
endif()

add_executable(ironwail ${IWAIL_SRC})
target_link_libraries(ironwail PRIVATE SDL2::SDL2)
if (SDL2_MAIN_LIBRARY)
	target_link_libraries(ironwail PRIVATE SDL2::main)
endif()

if (CURL_FOUND)
	target_link_libraries(ironwail PRIVATE CURL::libcurl)
else()
	target_compile_definitions(ironwail PRIVATE WITHOUT_CURL)
endif()

if (OpenGL::OpenGL)
	target_link_libraries(ironwail PRIVATE OpenGL::OpenGL)
else()
	target_link_libraries(ironwail PRIVATE OpenGL::GL)
endif()

if (PC_MPG123_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_MP3)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_MPG123)
elseif (PC_MAD_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_MP3)
	target_link_libraries(ironwail PUBLIC PkgConfig::PC_MAD)
endif()

if (PC_OPUSFILE_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_OPUS)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_OPUSFILE)
endif()

if (PC_FLAC_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_FLAC)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_FLAC)
endif()

if (PC_VORBISFILE_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_VORBIS)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_VORBISFILE)
elseif (PC_TREMOR_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_VORBIS VORBIS_USE_TREMOR)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_TREMOR)
endif()

if (PC_MIKMOD_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_MIKMOD)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_MIKMOD)
endif()

if (PC_MODPLUG_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_MODPLUG)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_MODPLUG)
endif()

if (PC_XMP_FOUND)
	target_compile_definitions(ironwail PRIVATE USE_CODEC_XMP)
    target_link_libraries(ironwail PUBLIC PkgConfig::PC_XMP)
endif()

if (PC_MIKMOD_FOUND OR PC_MODPLUG_FOUND OR PC_XMP_FOUND)
    target_compile_definitions(ironwail PRIVATE USE_CODEC_UMX)
endif()

if (WIN32)
	#Copy DLL dependencies to output folder
	add_custom_command(TARGET ironwail POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:ironwail> $<TARGET_FILE_DIR:ironwail>
		COMMAND_EXPAND_LISTS)

	#VORBISFILE and OPUSFILE both use the libogg-0.dll
	if (OGG_DLL AND (PC_VORBISFILE_FOUND OR PC_OPUSFILE_FOUND))
		add_custom_command(TARGET ironwail POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${OGG_DLL} $<TARGET_FILE_DIR:ironwail>
			COMMAND_EXPAND_LISTS)
	endif()
	#libvorbisfile depends on libvorbis-0.dll
	if (PC_VORBISFILE_FOUND AND VORBIS_DLL)
		add_custom_command(TARGET ironwail POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${VORBIS_DLL} $<TARGET_FILE_DIR:ironwail>
			COMMAND_EXPAND_LISTS)
	endif()
	#libopusfile depends on libopus-0.dll
	if (PC_OPUSFILE_FOUND AND OPUS_DLL)
		add_custom_command(TARGET ironwail POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${OPUS_DLL} $<TARGET_FILE_DIR:ironwail>
			COMMAND_EXPAND_LISTS)
	endif()
	#CURL wants zlib1.dll
	if (CURL_FOUND AND ZLIB1_DLL)
		add_custom_command(TARGET ironwail POST_BUILD
				COMMAND ${CMAKE_COMMAND} -E copy_if_different ${ZLIB1_DLL} $<TARGET_FILE_DIR:ironwail>
				COMMAND_EXPAND_LISTS)
	endif()
endif()

